--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167429667-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-167429667-1');
+    </script>
+
+
     <meta charset="UTF-8">
     <title>CV - Pavel Nikitsenka</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -37,7 +52,7 @@
                 <h4>Junior Python Developer</h4>
             </div>
 
-            <a href="#" class="buttonDownload">Download</a>
+            <a href="cv/CV-en.pdf" download="Nikitsenka-CV-eng.pdf"  class="buttonDownload">Download</a>
 
             <div class="container-block">
                 <h2>languages</h2>
@@ -126,7 +141,8 @@
                 <h2>profile</h2>
                 <blockquote>
                     I'm beginner in Python. Study Django on my own.<br>
-                    Since 2010 I have been developing apps in Delphi. Create programs, support and develop new functionality for existing applications.<br>
+                    Since 2010 I have been developing apps in Delphi. Create programs, support and develop new
+                    functionality for existing applications.<br>
                     I'm evolving my skills always. Responsible and punctual. Have critical thinking skills.
                 </blockquote>
                 <div class="container-address">
@@ -153,7 +169,7 @@
                                 <td class="table-second-col">
                                     <div class="award-data">
                                         <h3>Website</h3>
-                                        <p class="cursive"><a href="#">sitename.io</a></p>
+                                        <p class="cursive"><a href="https://jitteryman.github.io/Nikitsenka">jitteryman.github.io/Nikitsenka</a></p>
                                     </div>
                                 </td>
                             </tr>
@@ -323,7 +339,7 @@
                 <h4>Junior Python Developer</h4>
             </div>
 
-            <a href="#" class="buttonDownload">Скачать</a>
+            <a href="cv/CV-ru.pdf" download="Nikitsenka-CV-rus.pdf" class="buttonDownload">Скачать</a>
 
             <div class="container-block">
                 <h2>языки</h2>
@@ -412,8 +428,10 @@
                 <h2>профиль</h2>
                 <blockquote>
                     Я начинающий Python разработчик. Самостоятельно изучаю Django<br>
-                    С 2010 года пишу на Delphi. Занимаюсь созданием ПО, поддержкой, разработкой нового функционала для действующих приложений.<br>
-                    Постоянно развиваю имеющиеся навыки. Являюсь ответственным и пунктуальным. Обладаю критическим мышлением.
+                    С 2010 года пишу на Delphi. Занимаюсь созданием ПО, поддержкой, разработкой нового функционала для
+                    действующих приложений.<br>
+                    Постоянно развиваю имеющиеся навыки. Являюсь ответственным и пунктуальным. Обладаю критическим
+                    мышлением.
                 </blockquote>
                 <div class="container-address">
                     <div class="table-block">
@@ -439,7 +457,7 @@
                                 <td class="table-second-col">
                                     <div class="award-data">
                                         <h3>Сайт</h3>
-                                        <p class="cursive"><a href="#">sitename.io</a></p>
+                                        <p class="cursive"><a href="https://jitteryman.github.io/Nikitsenka">jitteryman.github.io/Nikitsenka</a></p>
                                     </div>
                                 </td>
                             </tr>
@@ -503,7 +521,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <h3 class="timeline-date">2017 - Present</h3>
+                            <h3 class="timeline-date">2017 - Н.В.</h3>
                         </li>
                         <li>
                             <span></span>
@@ -513,7 +531,8 @@
                             </div>
                             <div class="timeline-content">
                                 <ul>
-                                    <li>Управление серверами, ПК, маршрутизаторами, коммутаторами и существующими сетевыми приложеними
+                                    <li>Управление серверами, ПК, маршрутизаторами, коммутаторами и существующими
+                                        сетевыми приложеними
                                     </li>
                                     <li>Поддержка всех LAN, WAN и других сетевых систем</li>
                                     <li>Разработка приложений (Embarcadero Delphi, Borland C++ Builder)</li>
