--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
 
     <meta charset="UTF-8">
+    <meta property="og:site_name" content="Nikitsenka CV">
+    <meta property="og:title" content="CV Pavel Nikitsenka">
+    <meta property="og:image" content="images/meta.jpg">
+
     <title>CV - Pavel Nikitsenka</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
